Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference62.out
MethodReference62.java:19:21: compiler.err.abstract.cant.be.accessed.directly: kindname.method, foo(), MethodReference62.Sup
1 error
